# studytrack

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  StartGuide.md  docker-compose.services.yml  docker-compose.yml  finish-setup.sh  ghswitch.sh  package-lock.json  package.json  server.js  version.json
docs/: TECHNICAL.md
public/: app.js  index.html  style.css
routes/: exams.js  sandbox.js  sync.js
scripts/: build-sidecar.sh
services/: ai.service.js  rag.service.js  sandbox.service.js  search.service.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
